Add exception handling for other use cases. Test working landside tracer bullet